appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Beranda"
- tapOn:
    point: "896,1047"
- waitForAnimationToEnd
- tapOn:
    point: "540,500"
- waitForAnimationToEnd
- takeScreenshot: qa-alltx-02-filter-pengeluaran
- tapOn:
    point: "865,500"
- waitForAnimationToEnd
- takeScreenshot: qa-alltx-03-filter-pemasukan
