appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Beranda"
- tapOn:
    point: "939,685"
- waitForAnimationToEnd
- tapOn:
    point: "843,680"
- waitForAnimationToEnd
- takeScreenshot: qa-budgetreset-02-after
