appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Pengaturan"
- tapOn:
    point: "450,1752"
- waitForAnimationToEnd
- tapOn: "+ Tambah Kategori"
- waitForAnimationToEnd
- tapOn:
    point: "630,1241"
- inputText: "Kategori Tes QA"
- tapOn:
    point: "540,2154"
- waitForAnimationToEnd
- takeScreenshot: qa-kategoriadd-02-list
