appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Pengaturan"
- tapOn:
    point: "450,1752"
- waitForAnimationToEnd
- tapOn:
    point: "540,2180"
- waitForAnimationToEnd
- tapOn: "Hapus Kategori"
- waitForAnimationToEnd
- takeScreenshot: qa-kategoridelete-02-after
