appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Dompet"
- tapOn:
    point: "819,618"
- waitForAnimationToEnd
- tapOn: "2"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- tapOn: "0"
- takeScreenshot: qa-transfer-02-amount
- tapOn: "✓"
- waitForAnimationToEnd
- takeScreenshot: qa-transfer-03-after
