appId: com.catatuangbelanja.catat_uang_belanja
---
- launchApp
- tapOn: "Dompet"
- tapOn:
    point: "450,945"
- waitForAnimationToEnd
- tapOn:
    point: "964,168"
- waitForAnimationToEnd
- tapOn: "Hapus Dompet"
- takeScreenshot: qa-walletdelete-02-immediate
